# embedded

./: Kobuki.desktop  RViz2.desktop  run_navigation.sh  setup_kinect.sh  start_kobuki.sh  start_realvnc.sh  start_vnc.sh  start_web_vnc.sh
install/: local_setup.sh  setup.sh
install/astra_camera/include/astra_camera/: constants.h  device_listener.h  dynamic_params.h  ob_camera_node.h  ob_camera_node_factory.h  ob_context.h  ob_frame_listener.h  ob_timer_filter.h  ros_param_backend.h  types.h  utils.h  uvc_camera_driver.h
install/astra_camera/include/openni2/: KinectProperties.h  OniCAPI.h  OniCEnums.h  OniCProperties.h  OniCTypes.h  OniEnums.h  OniPlatform.h  OniProperties.h  OniTest.h  OniVersion.h  OpenNI.h  PS1080.h  PSLink.h  PrimeSense.h  SonixCamera.h  util.h
install/astra_camera/lib/astra_camera/: list_devices_node
install/astra_camera/share/astra_camera/: local_setup.sh  (+5 more)
install/ecl_devices/lib/: libecl_devices.so.1.2.1
install/ecl_exceptions/lib/: libecl_exceptions.so.1.2.1
install/ecl_filesystem/lib/: libecl_filesystem.so.1.2.1
install/ecl_formatters/lib/: libecl_formatters.so.1.2.1
install/ecl_geometry/lib/: libecl_geometry.so.1.2.1
install/ecl_io/lib/: libecl_io.so.1.2.0
install/ecl_ipc/lib/: libecl_ipc.so.1.2.1
install/ecl_linear_algebra/lib/: libecl_linear_algebra.so.1.2.1
install/ecl_manipulators/lib/: libecl_manipulators.so.1.2.1
install/ecl_mobile_robot/lib/: libecl_mobile_robot.so.1.2.1
install/ecl_streams/lib/: libecl_streams.so.1.2.1
install/ecl_threads/lib/: libecl_threads.so.1.2.1
install/ecl_time/lib/: libecl_time.so.1.2.1
install/ecl_time_lite/lib/: libecl_time_lite.so.1.2.0
install/kobuki_core/include/: CMakeLists.txt
install/kobuki_core/lib/: libkobuki_core.so.1.4.0
log/: latest_build
src/: oscillate_robot.py
src/kinect2_bridge/: CMakeLists.txt  package.xml
src/kinect2_bridge/launch/: kinect2_bridge.launch.py
src/kinect2_bridge/src/: kinect2_bridge_node.cpp
(+2419 files in other folders)
